Includes description for each recipe
Includes a brief description of each recipe.
Includes an ingredients list.
Includes the steps needed to make them.

--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -7,14 +7,39 @@
 </head>
 <body>
     <h1>Pasta</h1>
-    <a href="../index.html">Home</a>
-    <img src="../images/freshly-cooked-linguini-with-prawn-seafood-generated-by-ai.jpg" alt="An image of a freshly cooked linguine with prawn seafood" width="6067" height="3467">
-    <p>"Put the description of pasta here"</p>
-    <details>Ingredients</details>
-    <summary>
+    <a href="../index.html">Home</a> <br>
+    <img src="../images/freshly-cooked-linguini-with-prawn-seafood-generated-by-ai.jpg" alt="An image of a freshly cooked linguine pasta with prawn seafood" width="606" height="346">
+    <p>Pasta (UK: /ˈpæstə/, US: /ˈpɑːstə/; Italian: [ˈpasta]) is a type of food typically made from an unleavened dough of wheat flour mixed with water or eggs, and formed into sheets or other shapes, then cooked by boiling or baking. Pasta was originally only made with durum, although the definition has been expanded to include alternatives for a gluten-free diet, such as rice flour, or legumes such as beans or lentils. Pasta is believed to have developed independently in Italy and is a staple food of Italian cuisine, with evidence of Etruscans making pasta as early as 400 BCE in Italy.</p>
+
+    <p>Pastas are divided into two broad categories: dried (Italian: pasta secca) and fresh (Italian: pasta fresca). Most dried pasta is produced commercially via an extrusion process, although it can be produced at home. Fresh pasta is traditionally produced by hand, sometimes with the aid of simple machines. For more information <a href="https://en.wikipedia.org/wiki/Pasta#Ingredients_and_preparation">visit</a></p>
+    <details>
+    <summary>Ingredients</summary>
         <ul>
-            <li></li>
+            <li>200 g Linguine pasta or any long pasta</li>
+            <li>180 g prawns fresh or frozen</li>
+            <li>150g cherry tomatoes</li>
+            <li>2 tablespoons olive oil</li>
+            <li>1 tablespoon chilli flakes</li>
+            <li>2 tablespoons fresh basil chopped</li>
+            <li>125 ml white wine <small>1/2</small>cup optional</li>
+            <li>2 garlic cloves minced</li>
+            <li>1 tablespoon salt</li>
+            <li><small>1/2</small>tablespoon pepper</li>
+            <li>Lemon zest</li>
         </ul>
-    </summary>
+    </details>
+    <h2>Steps to prepare</h2>
+    <ol>
+        <li>If using fresh prawns it's important to clean them well from their shell and devein them.</li>
+        <li>In a large pot with salted water cook the pasta until al dente, according to the instructions on the package.</li>
+        <li>While the pasta is cooking, prepare the sauce.</li>
+        <li>Heat a large pan and heat the olive oil slightly. Add the minced garlic cloves and let it cook for a few minutes.</li>
+        <li>Add the chili flakes together with the cherry tomatoes. Let them cook for a few minutes until the tomatoes start to burst. Be careful as this might cause the oil to splash. </li>
+        <li>If using the white wine, add it at this stage and let it evaporate slightly before adding the prawns. Season with salt and pepper, and add the chopped basil.</li>
+        <li>Cook the prawns for a few minutes until they're nicely pink</li>
+        <li>Once the pasta is ready, drain it but set aside about half a cup of the pasta water.</li>
+        <li>Add the pasta to the pan with the tomato and prawn sauce together with some of the pasta water. Mix well and let it in the pan for a few seconds until you get a nice luscious sauce. If needed add more of the pasta water.</li>
+        <li>Serve immediately, with an extra sprinkling of fresh basil and lemon zest.</li>
+    </ol>
 </body>
 </html>
