--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -8,6 +8,35 @@
 <body>
     <h1>Tacos</h1>
     <a href="../index.html">Home</a>
-    <img src="../images/mexican-tacos-with-beef-tomato-sauce-salsa.jpg" alt="An image of a delicious taco" width="" height="">
+    <img src="../images/mexican-tacos-with-beef-tomato-sauce-salsa.jpg" alt="An image of a delicious taco" width="600" height="400">
+    <p>A taco (US: /ˈtɑːkoʊ/, UK: /ˈtækoʊ/, Spanish: [ˈtako]) is a traditional Mexican dish consisting of a small hand-sized corn- or wheat-based tortilla topped with a filling. The tortilla is then folded around the filling and eaten by hand. A taco can be made with a variety of fillings, including beef, pork, chicken, seafood, beans, vegetables, and cheese, and garnished with various condiments, such as salsa, guacamole, or sour cream, and vegetables, such as lettuce, coriander, onion, tomatoes, and chiles. Tacos are a common form of antojitos, or Mexican street food, which have spread around the world. For more information <a href="https://en.wikipedia.org/wiki/Taco">visit</a></p>
+    <details>
+        <summary>Ingredients</summary>
+        <ul>
+            <li>
+                1 pound lean ground beef
+            </li>
+            <li>
+                ½ teaspoon onion powder
+            </li>
+            <li>
+                ½ teaspoon garlic salt
+            </li>
+            <li>
+                ½ teaspoon celery salt
+            </li>
+            <li>
+                ½ teaspoon ground cumin
+            </li>
+            <li>
+                1 (8 ounce) can tomato sauce, or more to taste
+            </li>
+        </ul>
+    </details>
+    <h2>Steps to prepare</h2>
+    <ol>
+        <li>Heat a large skillet over medium-high heat. Cook and stir ground beef in the hot skillet until browned and crumbly, 5 to 7 minutes.</li>
+        <li>Season beef with onion powder, garlic salt, celery salt, and cumin. Pour tomato sauce over beef, stir to coat, and simmer until slightly thickened, about 5 minutes.</li>
+    </ol>
 </body>
 </html>
