--- a/recipes/chicken-sandwich.html
+++ b/recipes/chicken-sandwich.html
@@ -7,10 +7,10 @@
 </head>
 <body>
     <h1>Chicken-sandwich</h1>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a> <br>
     <img src="../images/club-sandwich-chicken-breast-lettuce-cheese-toast-bread-tomato-cucumber-french-fries-side-view.jpg" alt="An image of a chicken club sandwich" width="642" height="416">
     <p>A chicken sandwich is a sandwich that typically consists of boneless, skinless chicken breast or thigh, served between slices of bread. Variations on the "chicken sandwich" include chicken on a bun, chicken on a Kaiser, hot chicken, or chicken salad sandwich.</p>
-    <p>In the United States, the chicken sandwich usually consists of a chicken filet or patty, toppings and bread. The chicken meat can be deep fried, grilled, roasted or boiled, served hot or cold, and white or dark meat chicken can be used. Shredded chicken in one form or another, such as chicken salad, can also be used in chicken sandwiches. Another form is made with cold cuts. Wrap versions of the sandwich can also be made, in which the ingredients are rolled up inside a flatbread, such as a tortilla. Open-faced versions of the chicken sandwich, which feature hot chicken served with gravy on top of bread, are also common variations.</p>
+    <p>In the United States, the chicken sandwich usually consists of a chicken filet or patty, toppings and bread. The chicken meat can be deep fried, grilled, roasted or boiled, served hot or cold, and white or dark meat chicken can be used. Shredded chicken in one form or another, such as chicken salad, can also be used in chicken sandwiches. Another form is made with cold cuts. Wrap versions of the sandwich can also be made, in which the ingredients are rolled up inside a flatbread, such as a tortilla. Open-faced versions of the chicken sandwich, which feature hot chicken served with gravy on top of bread, are also common variations. For more information <a href="https://en.wikipedia.org/wiki/Chicken_sandwich">visit</a> </p>
     <details>
         <summary>Ingredients</summary>
         <ul>
