--- a/recipes/taco.html
+++ b/recipes/taco.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Tacos</h1>
-    <a href="../index.html">Home</a>
+    <a href="../index.html">Home</a> <br>
     <img src="../images/mexican-tacos-with-beef-tomato-sauce-salsa.jpg" alt="An image of a delicious taco" width="600" height="400">
     <p>A taco (US: /ˈtɑːkoʊ/, UK: /ˈtækoʊ/, Spanish: [ˈtako]) is a traditional Mexican dish consisting of a small hand-sized corn- or wheat-based tortilla topped with a filling. The tortilla is then folded around the filling and eaten by hand. A taco can be made with a variety of fillings, including beef, pork, chicken, seafood, beans, vegetables, and cheese, and garnished with various condiments, such as salsa, guacamole, or sour cream, and vegetables, such as lettuce, coriander, onion, tomatoes, and chiles. Tacos are a common form of antojitos, or Mexican street food, which have spread around the world. For more information <a href="https://en.wikipedia.org/wiki/Taco">visit</a></p>
     <details>
